{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 1182,
  "lineage": "622cd173-c03f-4270-ab73-402b13cec749",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app-nic-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bfb021e8735cb6c8",
            "associate_with_private_ip": "172.16.1.100",
            "association_id": "eipassoc-0e6317928f95457dd",
            "domain": "vpc",
            "id": "eipalloc-0bfb021e8735cb6c8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-072ce621149a982e7",
            "private_dns": "ip-172-16-1-100.ec2.internal",
            "private_ip": "172.16.1.100",
            "public_dns": "ec2-3-93-124-172.compute-1.amazonaws.com",
            "public_ip": "3.93.124.172",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.app-public-nic",
            "aws_security_group.app-sg",
            "aws_subnet.nat-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4976aa91e825369",
            "domain": "vpc",
            "id": "eipalloc-0c4976aa91e825369",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-21-195-59.compute-1.amazonaws.com",
            "public_ip": "23.21.195.59",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09c92d3eb1db3a728",
            "arn": "arn:aws:ec2:us-east-1:252420021683:instance/i-08b8568708991f124",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b8568708991f124",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-072ce621149a982e7"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-002caf92b5191be8f"
              }
            ],
            "primary_network_interface_id": "eni-072ce621149a982e7",
            "private_dns": "ip-172-16-1-100.ec2.internal",
            "private_ip": "172.16.1.100",
            "public_ip": "3.93.124.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08896be9b37c4b3c3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f690025639ca30de",
            "tags": {
              "Name": "nextcloud-app"
            },
            "tags_all": {
              "Name": "nextcloud-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b31a3e8db65d3424"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_iam_access_key.s3-access-key",
            "aws_iam_user.s3-nextcloud",
            "aws_instance.db_server",
            "aws_key_pair.generated_key",
            "aws_network_interface.app-public-nic",
            "aws_network_interface.local-app-nic",
            "aws_network_interface.local-db-nic",
            "aws_network_interface.nat-db-nic",
            "aws_security_group.app-sg",
            "aws_security_group.db-sg",
            "aws_security_group.local-app-sg",
            "aws_security_group.local-db-sg",
            "aws_subnet.local-subnet",
            "aws_subnet.nat-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09c92d3eb1db3a728",
            "arn": "arn:aws:ec2:us-east-1:252420021683:instance/i-0b14af27105d0f375",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b14af27105d0f375",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-005c7f12148be8c19"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-08ce3e3dcf7fcdd57"
              }
            ],
            "primary_network_interface_id": "eni-005c7f12148be8c19",
            "private_dns": "ip-172-16-3-100.ec2.internal",
            "private_ip": "172.16.3.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-081e28cdf163d62e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0135a459a4e314fce",
            "tags": {
              "Name": "nextcloud-db"
            },
            "tags_all": {
              "Name": "nextcloud-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07551945039aa100e"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_network_interface.local-db-nic",
            "aws_network_interface.nat-db-nic",
            "aws_security_group.app-sg",
            "aws_security_group.db-sg",
            "aws_security_group.local-db-sg",
            "aws_subnet.local-subnet",
            "aws_subnet.nat-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:internet-gateway/igw-060294deca715d2ef",
            "id": "igw-060294deca715d2ef",
            "owner_id": "252420021683",
            "tags": {
              "Name": "nextcloud-igw"
            },
            "tags_all": {
              "Name": "nextcloud-igw"
            },
            "vpc_id": "vpc-0322a5cc5a379bbd9"
          },
          "dependencies": [
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4976aa91e825369",
            "connectivity_type": "public",
            "id": "nat-07d8dfe6a182399e3",
            "network_interface_id": "eni-0cfc8fa57af629d22",
            "private_ip": "172.16.1.137",
            "public_ip": "23.21.195.59",
            "subnet_id": "subnet-0f690025639ca30de",
            "tags": {
              "Name": "nextcloud-nat-gateway"
            },
            "tags_all": {
              "Name": "nextcloud-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat-gateway-eip",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "app-public-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:network-interface/eni-072ce621149a982e7",
            "id": "eni-072ce621149a982e7",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:d4:85:e5:94:95",
            "owner_id": "252420021683",
            "private_ip": "172.16.1.100",
            "private_ips": [
              "172.16.1.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b31a3e8db65d3424"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f690025639ca30de",
            "tags": {
              "Name": "nextcloud-app-public-nic"
            },
            "tags_all": {
              "Name": "nextcloud-app-public-nic"
            }
          },
          "dependencies": [
            "aws_security_group.app-sg",
            "aws_subnet.nat-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "local-app-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:network-interface/eni-002caf92b5191be8f",
            "id": "eni-002caf92b5191be8f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:8f:7d:81:5d:cf",
            "owner_id": "252420021683",
            "private_ip": "172.16.2.100",
            "private_ips": [
              "172.16.2.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-08f96c853fbcd416c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075af68b2adb22c77",
            "tags": {
              "Name": "nextcloud-local-app-nic"
            },
            "tags_all": {
              "Name": "nextcloud-local-app-nic"
            }
          },
          "dependencies": [
            "aws_security_group.app-sg",
            "aws_security_group.local-app-sg",
            "aws_subnet.local-subnet",
            "aws_subnet.nat-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "local-db-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:network-interface/eni-08ce3e3dcf7fcdd57",
            "id": "eni-08ce3e3dcf7fcdd57",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:ba:15:b5:f5:c7",
            "owner_id": "252420021683",
            "private_ip": "172.16.2.200",
            "private_ips": [
              "172.16.2.200"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-097a12422c3e53e79"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075af68b2adb22c77",
            "tags": {
              "Name": "nextcloud-local-db-nic"
            },
            "tags_all": {
              "Name": "nextcloud-local-db-nic"
            }
          },
          "dependencies": [
            "aws_security_group.app-sg",
            "aws_security_group.local-db-sg",
            "aws_subnet.local-subnet",
            "aws_subnet.nat-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nat-db-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:network-interface/eni-005c7f12148be8c19",
            "id": "eni-005c7f12148be8c19",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:d7:e9:f4:77:75",
            "owner_id": "252420021683",
            "private_ip": "172.16.3.100",
            "private_ips": [
              "172.16.3.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07551945039aa100e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0135a459a4e314fce",
            "tags": {
              "Name": "nextcloud-nat-db-nic"
            },
            "tags_all": {
              "Name": "nextcloud-nat-db-nic"
            }
          },
          "dependencies": [
            "aws_security_group.app-sg",
            "aws_security_group.db-sg",
            "aws_subnet.nat-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw-routing-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:route-table/rtb-0d1b105d1b396765a",
            "id": "rtb-0d1b105d1b396765a",
            "owner_id": "252420021683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060294deca715d2ef",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "internet-gateway-routing-table"
            },
            "tags_all": {
              "Name": "internet-gateway-routing-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0322a5cc5a379bbd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-gateway-routing-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:route-table/rtb-0f28e73b01548dffe",
            "id": "rtb-0f28e73b01548dffe",
            "owner_id": "252420021683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d8dfe6a182399e3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nat-gateway-routing-table"
            },
            "tags_all": {
              "Name": "nat-gateway-routing-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0322a5cc5a379bbd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-gateway-eip",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e70379b0298165a6",
            "route_table_id": "rtb-0d1b105d1b396765a",
            "subnet_id": "subnet-0f690025639ca30de"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.igw-routing-table",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat-gateway-routing-table-asscociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b7308682c6f15f6",
            "route_table_id": "rtb-0f28e73b01548dffe",
            "subnet_id": "subnet-0135a459a4e314fce"
          },
          "dependencies": [
            "aws_eip.nat-gateway-eip",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.nat-gateway-routing-table",
            "aws_subnet.nat-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:security-group/sg-0b31a3e8db65d3424",
            "description": "app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b31a3e8db65d3424",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "in",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "in",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "in",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "next cloud app sg",
            "name_prefix": "",
            "owner_id": "252420021683",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0322a5cc5a379bbd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.nat-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:security-group/sg-07551945039aa100e",
            "description": "db security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07551945039aa100e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "in",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b31a3e8db65d3424"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.168.1.0/24"
                ],
                "description": "in",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0b31a3e8db65d3424"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "172.168.1.0/24"
                ],
                "description": "in",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b31a3e8db65d3424"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "next cloud db sg",
            "name_prefix": "",
            "owner_id": "252420021683",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0322a5cc5a379bbd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app-sg",
            "aws_subnet.nat-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "local-app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:security-group/sg-08f96c853fbcd416c",
            "description": "local app subnet security group",
            "egress": [
              {
                "cidr_blocks": [
                  "172.16.2.0/24"
                ],
                "description": "out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f96c853fbcd416c",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.2.0/24"
                ],
                "description": "in",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0b31a3e8db65d3424"
                ],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "next cloud local app sg",
            "name_prefix": "",
            "owner_id": "252420021683",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0322a5cc5a379bbd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app-sg",
            "aws_subnet.local-subnet",
            "aws_subnet.nat-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "local-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:security-group/sg-097a12422c3e53e79",
            "description": "local db subnet security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097a12422c3e53e79",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.2.0/24"
                ],
                "description": "in",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0b31a3e8db65d3424"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "172.16.2.0/24"
                ],
                "description": "in",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b31a3e8db65d3424"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.2.0/24"
                ],
                "description": "in",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b31a3e8db65d3424"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "next cloud local db sg",
            "name_prefix": "",
            "owner_id": "252420021683",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0322a5cc5a379bbd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app-sg",
            "aws_subnet.local-subnet",
            "aws_subnet.nat-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "local-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:subnet/subnet-075af68b2adb22c77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-075af68b2adb22c77",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252420021683",
            "tags": {
              "Name": "nextcloud-local-subnet"
            },
            "tags_all": {
              "Name": "nextcloud-local-subnet"
            },
            "vpc_id": "vpc-0322a5cc5a379bbd9"
          },
          "dependencies": [
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:subnet/subnet-0135a459a4e314fce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-0135a459a4e314fce",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252420021683",
            "tags": {
              "Name": "nextcloud-nat-subnet"
            },
            "tags_all": {
              "Name": "nextcloud-nat-subnet"
            },
            "vpc_id": "vpc-0322a5cc5a379bbd9"
          },
          "dependencies": [
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:subnet/subnet-0f690025639ca30de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0f690025639ca30de",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252420021683",
            "tags": {
              "Name": "nextcloud-public-subnet"
            },
            "tags_all": {
              "Name": "nextcloud-public-subnet"
            },
            "vpc_id": "vpc-0322a5cc5a379bbd9"
          },
          "dependencies": [
            "aws_vpc.nextcloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nextcloud-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252420021683:vpc/vpc-0322a5cc5a379bbd9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0930ae0a9f2d2571f",
            "default_route_table_id": "rtb-01691ca386d41123b",
            "default_security_group_id": "sg-0706daab75edafe71",
            "dhcp_options_id": "dopt-8a717df0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0322a5cc5a379bbd9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01691ca386d41123b",
            "owner_id": "252420021683",
            "tags": {
              "Name": "nextcloud-vpc"
            },
            "tags_all": {
              "Name": "nextcloud-vpc"
            }
          }
        }
      ]
    }
  ]
}